Basic Design of WebPage Set

--- a/index.html
+++ b/index.html
@@ -5,11 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/reset.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400" >
     <link rel="stylesheet" href="/CSS/style.css">
     <script src="script.js" defer></script>
     <title>Library</title>
 </head>
 <body>
-    
+    <h1>LIBRARY</h1>
+    <h2>By Syed Mohd Raza Hassan Bilgrami</h2>
+    <main>
+        <div class="bookShelf">
+            <button id="previous"><</button>
+            <button id="next">></button>
+            <div class="book read">Lord of the Rings</div>
+            <div class="book notread"></div>
+            <div class="book read"></div>
+            <div class="book"></div>
+            <div class="book "></div>
+            <div class="book"></div>
+            <div class="book read"></div>
+            <div class="book notread"></div>
+            <div class="book read"></div>
+            <div class="book notread"></div>
+            <div class="book"></div>
+            <div class="book"></div>
+            <div class="book notread"></div>
+            <div class="book read"></div>
+            <div class="book"></div>
+            <div class="book"></div>
+            <div class="book"></div>
+            <div class="book"></div>
+        </div>
+        <div class="lectern">
+            <p>Title</p>
+            <p>Author</p>
+            <p>Pages</p>
+            <div class="readToggle">
+                Read
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
