Added Base Features

--- a/index.html
+++ b/index.html
@@ -17,32 +17,30 @@
         <div class="bookShelf">
             <button id="previous"><</button>
             <button id="next">></button>
-            <div class="book read">Lord of the Rings</div>
-            <div class="book notread"></div>
-            <div class="book read"></div>
-            <div class="book"></div>
-            <div class="book "></div>
-            <div class="book"></div>
-            <div class="book read"></div>
-            <div class="book notread"></div>
-            <div class="book read"></div>
-            <div class="book notread"></div>
-            <div class="book"></div>
-            <div class="book"></div>
-            <div class="book notread"></div>
-            <div class="book read"></div>
-            <div class="book"></div>
-            <div class="book"></div>
-            <div class="book"></div>
-            <div class="book"></div>
+
         </div>
-        <div class="lectern">
-            <p>Title</p>
-            <p>Author</p>
-            <p>Pages</p>
-            <div class="readToggle">
-                Read
-            </div>
+        <div class="display ">
+            <button id="add">+</button>
+            <p id="title">Title</p>
+            <p id="author">Author</p>
+            <p id="pages">Pages</p>
+            <p id="read">Read</p>
+            <button id="remove">X</button>
+        </div>
+        <div class="input">
+            <label>
+                Title: <input type="text" id="inputTitle">
+            </label>
+            <label>
+                Author: <input type="text" id="inputAuthor">
+            </label>
+            <label>
+                Pages: <input type="text" id="inputPages">
+            </label>
+            <label>
+                Read? <input type="checkbox" id="inputRead">
+            </label>
+            <button id="submit"></button>
         </div>
     </main>
 
