Added Toggle Read Button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/reset.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400" >
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/CSS/style.css">
     <script src="script.js" defer></script>
     <title>Library</title>
@@ -21,7 +22,10 @@
             <p id="title"></p>
             <p id="author"></p>
             <p id="pages"></p>
-            <p id="read"></p>
+            <div id="readDisplay">
+                <p id="read"></p> 
+                <span class="material-icons">edit</span>
+            </div>
             <button id="remove">X</button>
         </div>
         <div class="input hide">
