Basic Website Stylizing Done

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="display">
             <button id="add">+</button>
             <p id="title"></p>
-            <p id="author"></p>
-            <p id="pages"></p>
+            <p>By <span id="author"></span></p>
+            <p>Pages <span id="pages"></span></p>
             <div id="readDisplay">
                 <p id="read"></p> 
                 <span class="material-icons">edit</span>
