Visual Improvements to Input Screen

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1>LIBRARY</h1>
-    <h2>By Syed Mohd Raza Hassan Bilgrami</h2>
+    <h2>By <a href="https://github.com/bilgramiraza" target="_blank">Syed Mohd Raza Hassan Bilgrami</a></h2>
     <main>
         <div class="bookShelf">
         </div>
@@ -26,7 +26,7 @@
                 <p id="read"></p> 
                 <span class="material-icons">edit</span>
             </div>
-            <button id="remove">X</button>
+            <button id="remove">x</button>
         </div>
         <div class="input hide">
             <label>
@@ -41,7 +41,10 @@
             <label>
                 Read? <input type="checkbox" id="inputRead">
             </label>
-            <button id="submit">Submit</button>
+            <div class="inputButtons">
+                <button id="submit">Submit</button>
+                <button id="cancel">Cancel</button>
+            </div>
         </div>
     </main>
 
