--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 Read? <input type="checkbox" id="inputRead">
             </label>
             <div class="inputButtons">
-                <button id="submit">Submit</button>
-                <button id="cancel">Cancel</button>
+                <button id="submit" class="read">Submit</button>
+                <button id="cancel" class="notread">Cancel</button>
             </div>
         </div>
     </main>
