Visual Update to Input and Display Page

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             <label>
                 Pages: <input type="text" id="inputPages" required>
             </label>
-            <label>
-                Read? <input type="checkbox" id="inputRead">
+            <label >
+                Read: <input type="checkbox" id="inputRead"> 
             </label>
             <div class="inputButtons">
                 <button id="submit" class="read">Submit</button>
