Fixed Overflow Issues

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="display">
             <button id="add">+</button>
             <p id="title"></p>
-            <p>By <span id="author"></span></p>
-            <p>Pages <span id="pages"></span></p>
+            <p>By: <span id="author"></span></p>
+            <p>Pages: <span id="pages"></span></p>
             <div id="readDisplay">
                 <p id="read"></p> 
                 <span class="material-icons">edit</span>
@@ -36,10 +36,10 @@
                 Author: <input type="text" id="inputAuthor" required>
             </label>
             <label>
-                Pages: <input type="text" id="inputPages" required>
+                Pages: <input type="number" id="inputPages" required>
             </label>
             <label >
-                Read: <input type="checkbox" id="inputRead"> 
+                Read? <input type="checkbox" id="inputRead"> 
             </label>
             <div class="inputButtons">
                 <button id="submit" class="read">Submit</button>
